examples/avr_usart/evaluation/without_constraints/avr_usart_write/test000002.kquery
array size[4] : w32 -> w8 = symbolic
array value[8] : w32 -> w8 = symbolic
(query [(Ult (ReadLSB w64 0 value)
              256)
         (Eq false
             (Eq 1
                 (ReadLSB w32 0 size)))]
        false)
